Make clipping consistent
Make clipping consistent between the importer and the clipper utilities. Use the Resampler for both.